# api_testing_rust

./: .env  .gitignore  Cargo.toml  README.md  example.env
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  test.yml
nextest/default/: junit.xml
src/: client.rs  lib.rs  middleware.rs
src/base/: api_client.rs  middleware.rs  mock_server.rs  mod.rs
src/base/types/: cookie_client.rs  mod.rs  proxy_config.rs
src/macros/: mod.rs  service_macro.rs
src/models/: mod.rs
src/models/requests/: auth_requests.rs  booking_requests.rs  mod.rs
src/models/responses/: auth_responses.rs  booking_responses.rs  mod.rs
src/models/shared/: auth_token.rs  booking.rs  mod.rs
src/responses/: idk.rs
src/services/: auth_service.rs  booking_service.rs  mod.rs  service.rs
tests/: auth_tests.rs  booking_tests.rs  first_example.rs  mock_example.rs  mod.rs
tests/example_organization/: mod.rs  test_example.rs
