[package]
name = "api_testing_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async libraries
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"

# Test dependencies
rstest = "0.18.2"
rstest_reuse = "0.6.0"
test-with = "0.10.4"

# Api related
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest-middleware = "0.2.3"
env_logger = "0.10.0"
async-trait = "0.1.73"
task-local-extensions = "0.1.4"
serde_derive = "1.0.188"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
