[package]
name = "api_testing_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async libraries
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
async-trait = "0.1.73"

# Test dependencies
rstest = "0.18.2"
rstest_reuse = "0.6.0"
test-with = "0.10.4"
speculoos = "0.11.0"

# Api related
reqwest = { version = "0.11.22", features = ["cookies", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
httpmock = "0.6.8"
reqwest-middleware = "0.2.3"
task-local-extensions = "0.1.4"

# Utils
env_logger = "0.10.0"
dotenv = "0.15.0"
log = "0.4.20"
pretty_assertions = "1.4.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
